message JoinRoomArgs {
	optional string roomId = 1;
	repeated KeyValuePair joinData = 2;
	optional bool isDevRoom = 3;
}

message JoinRoomOutput {
	optional string joinKey = 1;
	repeated ServerEndpoint endpoints = 2;
}
